Increase 'roll' action box min-height on mobile to prevent resizing after actions

--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -740,6 +740,10 @@ body {
   .action-box__msg-box:not(:last-child) {
     margin-right: 0;
   }
+
+  .action-box__msg-box--roll {
+    min-height: 124px;
+  }
 }
 .modal {
   display: none;
